--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.2",
+    "redux": "^4.0.1",
     "typescript": "3.2.2"
   },
   "scripts": {
